--- a/index.html
+++ b/index.html
@@ -162,22 +162,22 @@
           </div>
 
           <div class="space-y-2 p-6 bg-yello rounded-2xl">
-            <img src="assets/concept.png">
+            <img src="assets/flow-chart.png">
             <h3 class="text-xl font-extrabold">Design Process</h3>
             <p>The barn house captivates<br> with its blend of rustic charm<br> and modern.
             </p>
           </div>
 
           <div class="space-y-2 p-6 bg-lightg rounded-2xl">
-            <img src="assets/concept.png">
-            <h3 class="text-xl font-extrabold">Concept</h3>
+            <img src="assets/vision.png">
+            <h3 class="text-xl font-extrabold">Supervision</h3>
             <p>The barn house captivates<br> with its blend of rustic charm<br> and modern.
             </p>
           </div>
 
           <div class="space-y-2 p-6 bg-blu rounded-2xl">
-            <img src="assets/concept.png">
-            <h3 class="text-xl font-extrabold">Concept</h3>
+            <img src="assets/budget-planning.png">
+            <h3 class="text-xl font-extrabold">Budget Planning</h3>
             <p>The barn house captivates<br> with its blend of rustic charm<br> and modern.
             </p>
           </div>
@@ -185,30 +185,127 @@
         </div>
       </div>
 
-
     </section>
 
-    <div id="portfolio" class="bg-white">
+    <div id="portfolio" class="bg-white container mx-auto">
 
-      <div id="writing" class="mt-24 mb-8">
+      <div id="writing" class="mt-24 mb-8 flex flex-col justify-center items-center">
 
         <button class="btn bg-leaf rounded-3xl mb-4"><i class="fa-solid fa-arrow-right p-1 text-black"></i>Explore our
           Latest works</button>
 
         <h1 class="text-4xl font-black">Our Latest Portfolio</h1>
 
-        <p class="mt-8">The barn house captivates with its blend of rustic charm and modern sophistication,<br>
+        <p class="mt-8 text-center">The barn house captivates with its blend of rustic charm and modern
+          sophistication,<br>
           featuring weathered wood, sleek metal accents.</p>
 
+      </div>   
+
+        <div class="flex justify-center items-center">
+          <div id="first-grid" class="grid grid-cols-1 lg:grid-cols-3 gap-5">
+
+            <div class="flex p-6 lg:col-span-2 border rounded-2xl">
+              <div class="">
+                <img class="pr-6" src="assets/img1.png">
+              </div>
+              <div class="space-y-2">
+                <h1 class="text-xl font-bold mb-4">Commercial</h1>
+                <p class="mb-6">The barn house captivates with its blend of rustic charm<br> and modern. The barn house
+                  captivates with its blend of<br> rustic charm and modern .</p>
+                <button class=" bg-white text-xl font-bold">View Details <i
+                    class="fa-solid fa-arrow-right -rotate-45 bg-leaf rounded-2xl p-1"></i></button>
+              </div>
+            </div>
+
+            <div class="border p-6 rounded-2xl">
+              <img src="assets/img2.png">
+            </div>
+
+          </div>
+        </div>
+
+        <div id="second-grid" class="grid grid-cols-1 lg:grid-cols-4 gap-5 mt-6">
+
+          <div class="border p-6 rounded-2xl">
+            <img src="assets/img3.png">
+          </div>
+
+          <div class="flex p-6 lg:col-span-2 border rounded-2xl">
+            <div class="">
+              <img class="pr-6" src="assets/img4.png">
+            </div>
+            <div class="space-y-2">
+              <h1 class="text-xl font-bold mb-4">Commercial</h1>
+              <p class="mb-6">The barn house captivates with<br> its blend of rustic charm and<br> modern. </p>
+              <button class=" bg-white text-xl font-bold">View Details <i
+                  class="fa-solid fa-arrow-right -rotate-45 bg-leaf rounded-2xl p-1"></i></button>
+            </div>
+          </div>
+
+          <div class="border p-6 rounded-2xl
+          ">
+            <img src="assets/img5.png">
+          </div>
+
+        </div>
+
+
+      
+
+    </div>
+
+
+
+    <div id="check" class="container mx-auto">
+
+      <div id="writing" class="mt-20 mb-8 flex flex-col justify-center items-center">
+
+        <button class="btn bg-leaf rounded-3xl mb-4"><i class="fa-solid fa-arrow-right p-1 text-black"></i>Learn More</button>
+
+        <h1 class="text-4xl font-black">Facilities</h1>
+
+        <p class="mt-8 text-center">The barn house captivates with its blend of rustic charm and modern
+          sophistication,<br>
+          featuring weathered wood, sleek metal accents.</p>
       </div>
 
-      <div id="details" class="">
+      <div class="collapse bg-base-200 mb-6">
+        <input type="radio" name="my-accordion-1" checked="checked" />
+        <div class="collapse-title text-xl font-medium">Meets the clean lines of contemporary design</div>
+        <div class="collapse-content">
+          <p>These homes offer a solution to those seeking spaciousness, sustainability, and a touch of rural nostalgia reimagined for today’s living.</p>
+        </div>
+      </div>
 
+      <div class="collapse bg-base-200 mb-6">
+        <input type="radio" name="my-accordion-1" />
+        <div class="collapse-title text-xl font-medium">The Modern Experience</div>
+        <div class="collapse-content">
+          <p>Experience the perfect blend of old-world aesthetics and modern amenities, creating not just a house, but a lifestyle that connects you to nature and the future of home design.</p>
+        </div>
+      </div>
+
+      <div class="collapse bg-base-200 mb-6">
+        <input type="radio" name="my-accordion-1" />
+        <div class="collapse-title text-xl font-medium">Materials & Charm</div>
+        <div class="collapse-content">
+          <p>A blend of traditional materials like timber with modern finishes and fixtures.<br>While minimalist in design, these homes usually retain a warm, inviting atmosphere that balances old charm with contemporary living.</p>
+        </div>
+      </div>
+
+      <div class="collapse bg-base-200">
+        <input type="radio" name="my-accordion-1" checked="checked" />
+        <div class="collapse-title text-xl font-medium">Characteristics</div>
+        <div class="collapse-content">
+          <p>The culmination of these characteristics endows modern barn houses with a distinct appeal that’s both practical and picturesque. By borrowing elements from the past and marrying them with contemporary design, we create homes that feel grounded in history yet perfect for today’s living.</p>
+        </div>
       </div>
 
     </div>
 
-    <div id="form" class=" mt-28 pt-24 bg-cover py-24" style="background-image: url(assets/bg.jpg);">
+
+    <div id="form" class=" mt-28 pt-12 bg-cover py-24" style="background-image: url(assets/bg.jpg);">
 
       <div id="writing" class="mt-20 mb-8 flex flex-col justify-center items-center">
 
@@ -234,10 +331,10 @@
 
           <input type="text" placeholder="Email Number*" class="input w-full max-w-lg lg:pr-80 rounded-3xl" />
 
-          <textarea class="textarea textarea-lg lg:col-span-2 rounded-3xl"
+          <textarea class="textarea textarea-lg lg:col-span-2 rounded-3xl h-40"
             placeholder="Write your message here"></textarea>
 
-          <a class="btn bg-bk-green rounded-3xl font-black lg:col-span-2">Book Consult <i
+          <a class="btn bg-bk-green rounded-3xl font-black lg:col-span-2">Send Mail<i
               class="fa-solid fa-arrow-right -rotate-45 bg-black rounded-3xl p-1 text-white"></i></a>
         </div>
       </div>
