--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <img class="ml-36 hidden lg:flex" src="assets/Vector.png">
       <div class="container mx-auto flex flex-col lg:flex-row pb-28 gap-8">
 
-        <div id="text" class="flex-1">
+        <div id="text" class="flex-1 flex flex-col items-center">
           <button class="btn bg-white rounded-3xl"><i class="fa-solid fa-arrow-right p-1 text-black"></i>About
             Us</button>
           <h1 class="mt-4 text-3xl font-extrabold">We design thoughtful,<br> liveable spaces</h1>
