--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   <!-- Body -->
 
   <main>
-    <section id="about-us" class=" bg-slate-100 mt pt-6">
+    <section id="about" class=" bg-slate-100 mt pt-6">
 
       <img class="ml-36 hidden lg:flex" src="assets/Vector.png">
       <div class="container mx-auto flex flex-col lg:flex-row pb-28 gap-8">
